--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-and-unit-test:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,5 +24,26 @@ jobs:
       run: npm run test:unit
     - name: Display Softuni Useraname
       run: echo "atanaskyosew"
+  
+  execute-ui-test:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Use Node.js 20x
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20.x
+        cache: 'npm'
+        
+    - name: Install npm dependencies
+      run: npm install
+    - name: Install Playwright
+      run: npx playwright install
+    - name: Start the application
+      run: npm run start &
+    - name: Execute the UI tests
+      run: npm run test:ui
+
 
 
