Including needs into the UI job

--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -27,6 +27,7 @@ jobs:
   
   execute-ui-test:
     runs-on: ubuntu-latest
+    needs: build-and-unit-test
 
     steps:
     - uses: actions/checkout@v4
