--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -46,5 +46,15 @@ jobs:
     - name: Execute the UI tests
       run: npm run test:ui
 
+  deploy:
+    runs-on: ubuntu-latest
+    needs: execute-ui-test
+    steps:
+      - name: Deploy to production
+        uses: johnbeynon/render-deploy-action@v0.0.8
+        with:
+          service-id: ${{ secrets.SERVICE_KEY }}
+          api-key: ${{ secrets.RENDER_API_KEY }}
+
 
 
